impl api operations grouping